# poly-tag-axum

./: .gitignore  Cargo.toml  README.md  build.rs  diesel.toml
codegen/src/: error_enum.rs  lib.rs
poly-tag-codegen/src/: error_enum.rs  lib.rs
src/: app_state.rs  main.rs  schema.rs
src/_route_files/: handler_list.rs  handler_prepare.rs  handler_upload.rs  mod.rs
src/_route_tag_templates/: mod.rs
src/db/: mod.rs  model.rs  schema.rs
src/db/migrations/2023-03-14-145829_create_stagings/: down.sql  up.sql
src/db/migrations/2023-03-14-145829_create_uploads/: down.sql  up.sql
src/db/migrations/2023-03-17-085344_create_files/: up.sql
src/db/migrations/2023-07-08-182239_create_tag_templates/: down.sql  up.sql
src/db/migrations/2023-07-08-183359_create_tags/: up.sql
src/db/migrations/2024-01-08-194510_create_collections/: down.sql  up.sql
src/db/migrations/2024-01-28-163751_enable_extension_uuid-ossp/: down.sql  up.sql
src/db/migrations/2024-01-28-163855_create_collections/: down.sql  up.sql
src/db/migrations/2024-01-28-165221_create_files/: down.sql  up.sql
src/db/migrations/2024-01-28-165445_create_collection_file_pairs/: down.sql  up.sql
src/db/migrations/2024-01-28-170150_create_tags/: down.sql  up.sql
src/docs/: mod.rs
src/errors/: mod.rs
src/file_driver/: compute_file_hash.rs  compute_file_mime.rs  mod.rs
src/multipart/: mod.rs
src/response/: into_status.rs  mod.rs
src/route_collections/: collection_service.rs  mod.rs
src/route_files/: handler_list.rs  handler_prepare.rs  handler_upload.rs  mod.rs
src/route_stagings/: dto.rs  error.rs  handler_get.rs  handler_post.rs  handler_put.rs  mod.rs
src/route_tag_templates/: handler_list.rs  handler_post.rs  mod.rs
src/route_uploads/: dto.rs  error.rs  mod.rs
src/schema/: dto_in.rs  dto_out.rs  error.rs
