[package]
name = "poly-tag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = { path = "./codegen" }

axum = { version = "0.6", features = ["headers", "http2", "macros", "multipart"] }
axum-extra = { version = "0.7" }
chrono = { version = "0.4", features = ["serde"] }
crc32fast = { version = "1.3", features = ["nightly"] }
diesel = { version = "2", features = ["chrono", "postgres", "uuid"] }
diesel-async = { version = "0.2.1", features = ["deadpool", "postgres"] }
diesel_migrations = { version = "2", features = ["postgres"] }
futures = { version = "0.3" }
http-body = { version = "0.4.5" }
infer = { version = "0.13" }
mime_guess = { version = "2" }
num_cpus = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
smartstring = { version = "1.0.1", features = ["serde"] }
thiserror = { version = "1" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "3", features = ["axum_extras", "chrono", "time", "uuid"] }
utoipa-swagger-ui = { version = "3", features = ["axum"] }
uuid = { version = "1.3", features = ["v4", "serde"] }

[toolchain]
channel = "nightly"
